--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <section class="form hide">
         <h2>Entre na lista de doadores</h2>
-        <form action="/">
+        <form action="/" method="POST">
             <input type="text" name="name" placeholder="Nome completo">
             <input type="text" name="email" placeholder="Email">
             <input type="text" name="blood" placeholder="Tipo sanguíneo">
@@ -37,25 +37,15 @@
         <h2>Últimos <span>doadores</span></h2>
 
         <section class="donors">
-            <div class="donor">
-                <div class="blood">AB+</div>
-                <p>Gabriel HNE</p>
-            </div>
 
-            <div class="donor">
-                <div class="blood">AB+</div>
-                <p>Gabriel HNE</p>
-            </div>
+            {% for donor in donors %}
 
-            <div class="donor">
-                <div class="blood">AB+</div>
-                <p>Gabriel HNE</p>
-            </div>
+                <div class="donor">
+                    <div class="blood">{{donor.blood}}</div>
+                    <p>{{donor.name}}</p>
+                </div>
 
-            <div class="donor">
-                <div class="blood">AB+</div>
-                <p>Gabriel HNE</p>
-            </div>
+            {%endfor%}
         </section>
     </main>
 
@@ -63,7 +53,7 @@
         Com ❤️ GabrielHNE
     </footer>
 
-    <script src="scripts.js"> </script>
+    <script src="/scripts.js"> </script>
 
     
 </body>
